--- a/index.html
+++ b/index.html
@@ -1,14 +1,11 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html>
-  <head>
-    <title>Seyit İlktürk</title>
-  </head>
-  
-  <body>
-  <h3>I will be here soon.</h3>
-  </body>
+<head>
+	<link rel="stylesheet" type="text/css" href="style.css">
+	<title>Erdem</title>
+</head>
+<body>
 
 
-
-
+</body>
 </html>
