--- a/index.html
+++ b/index.html
@@ -1,11 +1,37 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<title>Seyit İlktürk | Software Developer</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
-	<title>Erdem</title>
+	<link rel="shortcut icon" type="text/img" href="img/favicon.png">
+	<link href="https://fonts.googleapis.com/css?family=Oswald:700" rel="stylesheet">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
+
+
+
+
+
+
 </head>
 <body>
 
+	<div class="mainbox">
+		
+		<img src="img/profile.png" class="profile">
+
+		<h1>Seyit İlktürk</h1>
+		<h2>Software Developer</h3>
+		<h4>I am so new to coding world and have just started to learn basic coding, web development, software development approaches, algorithms, data structures, design patterns and finally design. I aim to be machine learning engineer. You can find my progress, projects and social network links. contact me. hugs from Istanbul. </h2>
+
+		<ul>
+			<li><a href="https://github.com/seyitilkturk"><i class="fab fa-github-square"></i></a></li>
+			<li><a href="https://www.facebook.com/seyitilkturks"><i class="fab fa-facebook-square"></i></a></li>
+			<li><a href="https://www.twitter.com/seyitilkturk"><i class="fab fa-twitter-square"></i></a></li>
+			<li><a href="https://www.linkedin.com/in/seyitilkturk/"><i class="fab fa-linkedin"></i></a></li>
+			
+		</ul>
+
+	</div>
 
 </body>
 </html>
