--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
 		<h4>I am so new to coding world and have just started to learn basic coding, web development, software development approaches, algorithms, data structures, design patterns and finally design. I aim to be machine learning engineer. You can find my progress, projects and social network links. contact me. hugs from Istanbul. </h2>
 
 		<ul>
-			<li><a href="https://github.com/seyitilkturk"><i class="fab fa-github-square"></i></a></li>
-			<li><a href="https://www.facebook.com/seyitilkturks"><i class="fab fa-facebook-square"></i></a></li>
-			<li><a href="https://www.twitter.com/seyitilkturk"><i class="fab fa-twitter-square"></i></a></li>
-			<li><a href="https://www.linkedin.com/in/seyitilkturk/"><i class="fab fa-linkedin"></i></a></li>
+			<li><a target="_blank" href="https://github.com/seyitilkturk"><i class="fab fa-github-square"></i></a></li>
+			<li><a target="_blank" href="https://www.facebook.com/seyitilkturks"><i class="fab fa-facebook-square"></i></a></li>
+			<li><a target="_blank" href="https://www.twitter.com/seyitilkturk"><i class="fab fa-twitter-square"></i></a></li>
+			<li><a target="_blank" href="https://www.linkedin.com/in/seyitilkturk/"><i class="fab fa-linkedin"></i></a></li>
 			
 		</ul>
 
