--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Seyit İlktürk</title>
+    <title>Seyit İlktürk | Developer</title>
+    <link rel="shortcut icon" type="text/img" href="img/favicon.png">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Fira+Sans:400,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
@@ -18,7 +19,7 @@
         <div class="row">
             <div class="col-lg-6 col-md-12">
                 <div class="textbox">
-                    <h1>Seyit İlktürk | Software Developer</h1>
+                    <h1>Seyit İlktürk</h1>
                     <h2>Software Developer</h2> 
                 </div>
 
