--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <a href="https://twitter.com/seyitilkturk"><h3>Twitter</h3></a>
                     <a href="https://www.facebook.com/seyitilkturks"><h3>Facebook</h3></a>
                     <a href="https://www.instagram.com/seyitilkturk/"><h3>Instagram</h3></a>
-                    <a href="ilkturk.seyit@gmail.com"><h3>Mail</h3></a>
+                    <a href="mailto:ilkturk.seyit@gmail.com"><h3>Mail</h3></a>
                     
                                
                 </div>
